--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,246 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Foursquare Checkins</title>
+<title>Grocery App</title>
+<link href="http://code.jquery.com/mobile/1.3.0-beta.1/jquery.mobile-1.3.0-beta.1.min.css" rel="stylesheet" type="text/css" />
+<script src="http://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
+<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="angular.js"></script>
+<script type="text/javascript" src="jquery-mobile-angular-adapter.js"></script>
+<script type="text/javascript" src="index.js"></script>
+<style>
+.progressbar{ border:1px solid gray; width:100%; height:15px; }
+.progress{ background-color:green; width:45%; height:15px; }
+</style>
 </head>
 
-<body>
+<body ng-app="grocery" ng-controller="TodoController" ng-init="start()">
+
+<!-- LOGIN -->
+<div data-role="page" id="login">
+	<div data-role="header">
+		<h1>Login</h1>
+	</div>
+	<div data-role="content">
+		<a href="#registration" data-role="button">Create an Account</a>
+		<form ng-submit="login()" action="" data-ajax="false">
+			<input type="text" placeholder="email" ng-model="logindata.email" />
+			<input type="text" placeholder="password" ng-model="logindata.password" />
+			<table width="100%">
+			<tr>
+			<td>Forgot your password?</td>
+			<td><input type="submit" value="Login" /></td>
+			</tr>
+			</table>
+		</form>
+	</div>
+	<div data-role="footer">
+		<div data-role="controlgroup" data-type="horizontal" >
+			<a data-role="button" href="#leaderboard">Lead</a>
+			<a data-role="button" href="#scan">Scan</a>	
+			<a data-role="button" href="#dashboard">Dash</a>
+			<a data-role="button" href="#report">Report</a>	
+			<a data-role="button" href="#lookup">Lookup</a>			
+		</div>
+	</div>
+</div>
+
+<!-- REGISTRATION -->
+<div data-role="page" id="registration">
+	<div data-role="header">
+		<h1>Registration</h1>
+		
+	</div>
+	<div data-role="content">
+		<form data-ajax="false" ng-submit="register()">
+			<input type="text" placeholder="username" ng-model="regdata.username" />
+			<input type="text" placeholder="email" ng-model="regdata.email" />
+			<input type="text" placeholder="password" ng-model="regdata.password" />
+			<input type="text" placeholder="confirm password" ng-model="regdata.confirm" />
+			<table width="100%">
+			<tr>
+			<td><a href="#login">Login</a></td>
+			<td><input type="submit" value="register" /></td>
+			</tr>
+			</table>
+		</form>
+	</div>
+	<div data-role="footer">
+		<div data-role="controlgroup" data-type="horizontal" >
+			<a data-role="button" href="#leaderboard">Lead</a>
+			<a data-role="button" href="#scan">Scan</a>	
+			<a data-role="button" href="#dashboard">Dash</a>
+			<a data-role="button" href="#report">Report</a>	
+			<a data-role="button" href="#lookup">Lookup</a>			
+		</div>
+	</div>
+</div>
+
+<!-- Dashboard -->
+<div data-role="page" id="dashboard" >
+	<div data-role="header">
+		<h1>Dashboard</h1>
+	</div>
+	<div data-role="content">
+	
+		<div class="ui-grid-a">
+			<div class="ui-block-a">
+				<img src="https://en.gravatar.com/avatar/d8671fa8a4476b40347fc63dde0d2828"  />
+			</div>
+			<div class="ui-block-b">
+				{{user.username}}<br />
+				{{user.location}}<br />
+				<div class="ui-grid-a">
+					<div class="ui-block-a"><b>{{user.points}}</b></div>
+					<div class="ui-block-b">{{user.level}}</div>
+				</div>
+			</div>		
+		</div>
+		<div class="progressbar">
+			<div class='progress'></div>	
+		</div>
+		<ul data-role="listview" data-inset="true">
+			<li>{{user.leaderboard.rank}}<a href="#leaderboard">Leaderboard Rank</a></li>
+			<li>{{user.leaderboard.rank}}<a href="#">Overall Rank</a></li>
+		</ul>
+		My History
+		<ul data-role="listview" data-inset="true">
+			<li>{{user.ireported}}<a href="#">Items Reported</a></li>
+			<li>{{user.svisited}}<a href="#">Stores Visited</a></li>
+		</ul>
+	
+	</div>
+	<div data-role="footer">		
+		<div data-role="controlgroup" data-type="horizontal" >
+			<a data-role="button" href="#leaderboard">Lead</a>
+			<a data-role="button" href="#scan">Scan</a>	
+			<a data-role="button" href="#dashboard">Dash</a>
+			<a data-role="button" href="#report">Report</a>	
+			<a data-role="button" href="#lookup">Lookup</a>			
+		</div>		
+	</div>
+</div>
+
+<!-- Leaderboard -->
+<div data-role="page" id="leaderboard">
+	<div data-role="header">
+		<h1>Leaderboard</h1>
+	</div>
+	<div data-role="content">
+		<div class="ui-grid-a">
+			<div class="ui-block-a">My Rank #14</div>
+			<div class="ui-block-b">+15 to level up</div>
+		</div>
+		<hr />
+		<ul data-role="listview">
+			<li><img src="http://25.media.tumblr.com/avatar_12e428a5a556_128.png" width="40" height="40" />Jonathan42</li>
+			<li>
+				<img src="http://25.media.tumblr.com/avatar_824db6d89e00_128.png" width="40" height="40" />MittR
+			</li>
+			<li><a href="#">Page</a></li>
+			<li><a href="#">Page</a></li>
+		</ul>
+		
+	</div>
+	<div data-role="footer">
+		<h4>Navigation</h4>
+	</div>
+</div>
+
+<!-- Scan -->
+<div data-role="page" id="scan" data-add-back-btn="true">
+	<div data-role="header">
+		<h1>Scan to Report</h1>
+	</div>
+	<div data-role="content" style="margin:0px;">
+		<img src="http://www.codeupc.net/barcode.jpg" style="width:100%" />
+	<button>Report Item Manually</button>
+	</div>
+	<div data-role="footer">
+		<h4>Navigation</h4>
+	</div>
+</div>
+
+<!-- Input Item -->
+<div data-role="page" id="report" data-add-back-btn="true">
+	<div data-role="header">
+		<h1>Report Item</h1>
+	</div>
+	<div data-role="content">
+		<ul data-role="listview">
+			<li><a href="#">Smiths Grocery Store</a></li>
+		</ul>
+		<br />		
+		<div data-role="fieldcontain">			
+			<div class="ui-grid-a">
+				<div class="ui-block-a">
+					<div data-role="fieldcontain">
+						<label for="textinput2">UPC:</label>
+						<input type="text" name="textinput2" id="textinput2" value=""  />
+					</div>	
+				</div>
+				<div class="ui-block-b">
+					<br />
+					<label for="b2">&nbsp;</label>
+					<input name="b2" type="button" value="Lookup" />
+				</div>
+			</div>
+		</div>
+		
+		<table style="border:1px solid gray; width:100%">
+			<tr>
+				<td><img src="http://files.softicons.com/download/system-icons/apple-logo-icons-by-thvg/png/512/Apple%20logo%20icon%20-%20Aluminum.png" width="50" /></td>
+				<td>Name</td>
+			</tr>
+		</table>
+		<div class="ui-grid-a">
+			<div class="ui-block-a">
+				<div data-role="fieldcontain">
+					<label for="textinput2">Text Input:</label>
+					<input type="text" name="textinput2" id="textinput2" value=""  />
+				</div>			
+			</div>
+			<div class="ui-block-b">
+				<div data-role="fieldcontain">
+					
+					<label for="flipswitch">Purchased?</label>
+					<select name="flipswitch" id="flipswitch" data-role="slider">
+						<option value="off">Off</option>
+						<option value="on">On</option>
+					</select>
+				</div>
+			</div>
+			<br style="clear:both;" />
+			<a href="#" data-role="button">Report Item</a>
+		</div>
+		
+		
+	</div>
+	<div data-role="footer">
+		<div data-role="controlgroup" data-type="horizontal" >
+			<a data-role="button" href="#leaderboard">Lead</a>
+			<a data-role="button" href="#scan">Scan</a>	
+			<a data-role="button" href="#dashboard">Dash</a>
+			<a data-role="button" href="#report">Report</a>	
+			<a data-role="button" href="#lookup">Lookup</a>			
+		</div>	
+	</div>
+</div>
+
+<!-- Input Item -->
+<div data-role="page" id="lookup" data-add-back-btn="true">
+	<div data-role="header">
+		<h1>Lookup Item</h1>
+	</div>
+	<div data-role="content">
+		<ul data-role="listview">
+			<li ng-repeat="items in lookup"><a href="#"><img src="http://www.veryicon.com/icon/png/System/Candied%20Apples/Candy%20Apple%20Green%202.png" alt="Buy" class="ui-li-icon">{{items.name}}</a></li>			
+		</ul>		
+	</div>
+	<div data-role="footer">
+		<h4>Footer</h4>
+	</div>
+</div>
+
 </body>
 </html>
