--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <title>Grocery App</title>
 <link href="http://code.jquery.com/mobile/1.3.0-beta.1/jquery.mobile-1.3.0-beta.1.min.css" rel="stylesheet" type="text/css" />
 <script src="http://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
-<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js" type="text/javascript"></script>
+<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.js" type="text/javascript"></script>
 <script type="text/javascript" src="angular.js"></script>
 <script type="text/javascript" src="jquery-mobile-angular-adapter.js"></script>
 <script type="text/javascript" src="index.js"></script>
@@ -13,9 +13,29 @@
 .progressbar{ border:1px solid gray; width:100%; height:15px; }
 .progress{ background-color:green; width:45%; height:15px; }
 </style>
+<style type='text/css'>
+<!--
+	html { background-color: #333; }
+	@media only screen and (min-width: 600px){
+		.ui-page {
+			width: 320px !important;
+			margin: 0 auto !important;
+			position: relative !important;
+			border-right: 5px #666 outset !important;
+			border-left: 5px #666 outset !important;
+		}
+	}
+	
+	.ui-btn-corner-all {
+		-moz-border-radius:   5px
+		-webkit-border-radius:5px
+		border-radius:            5px 
+	}
+-->
+</style>
 </head>
 
-<body ng-app="grocery" ng-controller="TodoController" ng-init="start()">
+<body ng-app="grocery" ng-controller="TodoController" ng-init="getStoresNearby()">
 
 <!-- LOGIN -->
 <div data-role="page" id="login">
@@ -36,7 +56,7 @@
 		</form>
 	</div>
 	<div data-role="footer">
-		<div data-role="controlgroup" data-type="horizontal" >
+		<div data-role="controlgroup" data-type="horizontal"  >
 			<a data-role="button" href="#leaderboard">Lead</a>
 			<a data-role="button" href="#scan">Scan</a>	
 			<a data-role="button" href="#dashboard">Dash</a>
@@ -155,10 +175,24 @@
 	</div>
 	<div data-role="content" style="margin:0px;">
 		<img src="http://www.codeupc.net/barcode.jpg" style="width:100%" />
-	<button>Report Item Manually</button>
+		<a data-role="button" href="#report">Report Item Manually</a>
 	</div>
 	<div data-role="footer">
 		<h4>Navigation</h4>
+	</div>
+</div>
+
+<!-- Nearby Stores -->
+<div data-role="page" id="nearbyStores" data-add-back-btn="true">
+	<div data-role="header">
+		<h1>Select Nearest Store</h1>
+	</div>
+	<div data-role="content">
+		<ul data-role="listview" id="nearbyStoresList">
+			<li ng-repeat="store in storesNearby">
+				<a ng-click="selectStore(store)" href="#report">{{store.name}} ({{store.city}},{{store.state}})</a>
+			</li>
+		</ul>
 	</div>
 </div>
 
@@ -168,8 +202,10 @@
 		<h1>Report Item</h1>
 	</div>
 	<div data-role="content">
-		<ul data-role="listview">
-			<li><a href="#">Smiths Grocery Store</a></li>
+		<ul data-role="listview" ng-show="storesNearby.length">
+			<li><a ng-click="myLoc()" href="#nearbyStores" >
+				<img src="http://3.bp.blogspot.com/_1nVKvknoYl0/SxKtCkm0D-I/AAAAAAAAApM/EqIo3DsA0Hw/s320/11396.png" class="ui-li-icon"  /> {{selectedStore.name}} ({{selectedStore.city}},{{selectedStore.state}})
+			</a></li>
 		</ul>
 		<br />		
 		<div data-role="fieldcontain">			
@@ -177,42 +213,45 @@
 				<div class="ui-block-a">
 					<div data-role="fieldcontain">
 						<label for="textinput2">UPC:</label>
-						<input type="text" name="textinput2" id="textinput2" value=""  />
+						<input type="text" name="textinput2" ng-change="readItem();" ng-model="report.barcode"  />
 					</div>	
 				</div>
 				<div class="ui-block-b">
 					<br />
 					<label for="b2">&nbsp;</label>
-					<input name="b2" type="button" value="Lookup" />
+					<input name="b2" type="button" ng-click="readItem();" value="Lookup" />
 				</div>
 			</div>
 		</div>
 		
 		<table style="border:1px solid gray; width:100%">
 			<tr>
-				<td><img src="http://files.softicons.com/download/system-icons/apple-logo-icons-by-thvg/png/512/Apple%20logo%20icon%20-%20Aluminum.png" width="50" /></td>
-				<td>Name</td>
+				<td><img src="" ng-src="{{report.img}}" width="50" /></td>
+				<td>
+					{{report.name}}<br />
+					<span style="font-size:9px;">{{report.description}}</span>
+				</td>
 			</tr>
 		</table>
 		<div class="ui-grid-a">
 			<div class="ui-block-a">
 				<div data-role="fieldcontain">
-					<label for="textinput2">Text Input:</label>
-					<input type="text" name="textinput2" id="textinput2" value=""  />
+					<label for="textinput2">Price</label>
+					<input type="text" value="" ng-model="report.price"  />
 				</div>			
 			</div>
 			<div class="ui-block-b">
 				<div data-role="fieldcontain">
 					
 					<label for="flipswitch">Purchased?</label>
-					<select name="flipswitch" id="flipswitch" data-role="slider">
+					<select name="flipswitch" id="flipswitch" data-role="slider" ng-option="report.purchased">
 						<option value="off">Off</option>
 						<option value="on">On</option>
 					</select>
 				</div>
 			</div>
 			<br style="clear:both;" />
-			<a href="#" data-role="button">Report Item</a>
+			<a data-role="button" ng-click="reportItem()">Report Item</a>
 		</div>
 		
 		
