--- a/public/test/index.html
+++ b/public/test/index.html
@@ -5,6 +5,11 @@
 		<script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
 		<script src="/test/testSetup.js"></script>
 		<script src="/test/productTests.js"></script>
+		<script src="/test/purchaseTests.js"></script>
+		<script src="/test/userTests.js"></script>
+		<script src="/test/storeTests.js"></script>
+		<script src="/test/subscriberTests.js"></script>
+		<script src="/test/tagTests.js"></script>
 		<title>GPT API Tests</title>
 	</head>
 	
