--- a/public/test/index.html
+++ b/public/test/index.html
@@ -10,6 +10,7 @@
 		<script src="/test/storeTests.js"></script>
 		<script src="/test/subscriberTests.js"></script>
 		<script src="/test/tagTests.js"></script>
+		<script src="/test/itemTests.js"></script>
 		<title>GPT API Tests</title>
 	</head>
 	
