--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,16 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Grocery App</title>
+<link rel="stylesheet" type="text/css" href="themes/jungle.min.css"/>
+<!-- 
 <link href="http://code.jquery.com/mobile/1.3.0-beta.1/jquery.mobile-1.3.0-beta.1.min.css" rel="stylesheet" type="text/css" />
 <script src="http://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
 <script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.js" type="text/javascript"></script>
+-->
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile.structure-1.2.0.min.css" />
+<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+
 <script type="text/javascript" src="angular.js"></script>
 <script type="text/javascript" src="jquery-mobile-angular-adapter.js"></script>
 <script type="text/javascript" src="index.js"></script>
@@ -29,6 +36,15 @@
 .high{color:red;}
 .low{color: green;}
 .avg{color:goldenrod;}
+
+/* Report Page */
+.reportok{color: #4F8A10 !important; background-color: #DFF2BF; border: 1px solid green; }
+.info, .success, .warning, .error, .validation {border: 1px solid; margin: 10px 0px;padding:15px 10px 15px 50px;background-repeat: no-repeat; background-position: 10px center;}
+.info {color: #00529B;background-color: #BDE5F8;background-image: url('info.png'); }
+.success{color: #4F8A10; background-color: #DFF2BF; background-image:url('success.png');}
+.warning {color: #9F6000;background-color: #FEEFB3;background-image: url('warning.png');}
+.error {color: #D8000C;background-color: #FFBABA;background-image: url('error.png');}
+
 
 </style>
 <style type='text/css'>
@@ -307,27 +323,27 @@
 				<img src="http://3.bp.blogspot.com/_1nVKvknoYl0/SxKtCkm0D-I/AAAAAAAAApM/EqIo3DsA0Hw/s320/11396.png" class="ui-li-icon"  /> {{selectedStore.name}} ({{selectedStore.city}},{{selectedStore.state}})
 			</a></li>
 		</ul><br />
-		
+		<div class="{{report.messageclass}}">{{report.message}}</div>
 		<table>
 			<tr>
 				<td><b>UPC</b> </td>
 				<td>
-					<input type="text" name="textinput2" ng-change="readItem();" ng-model="report.barcode" style="width:90%;" placeholder="UPC" />
+					<input type="text" name="textinput2" ng-change="readItem();" ng-model="report.barcode" style="width:90%;" placeholder="UPC" max="12" maxlength="12" />
 				</td>
 				<td>
 					<input name="b2" data-mini="true" type="button" ng-click="readItem();" value="Lookup" />
 				</td>
 			</tr>
 		</table>		
-		
-		<table style="border:1px solid gray; width:100%">
+		<div ng-show="report.barcode.length">
+			<table style="border:1px solid gray; width:100%">
 			<tr>
-				<td width="22%"><img src="" ng-src="{{report.img}}" width="50" /></td>
+				<td width="22%"><img src="images/placeholder.gif" ng-src="{{report.img}}" width="50" height="50" style="background-color:#DBDBDB;" /></td>
 				<td width="66%" valign="top">
 					<div style="font-weight:bold;">{{report.name}}</div>
 					<div style="font-size:9px; ">{{report.description}}</div>
 					<div style="font-size:12px; color:gray;">
-						{{report.size}} {{report.units_abrev}}
+						{{report.size.amount}} {{report.size.units}}
 						
 					</div>
 					<div style="font-size:11px;">
@@ -341,7 +357,7 @@
 				</td>
 			</tr>
 		</table>
-		<div class="ui-grid-a">
+			<div class="ui-grid-a">
 			<div class="ui-block-a">
 				<div data-role="fieldcontain">
 					<label for="textinput2">Price</label>
@@ -352,18 +368,18 @@
 				<div data-role="fieldcontain">
 					
 					<label for="flipswitch">Purchased?</label>
-					<select name="flipswitch" id="flipswitch" data-role="slider" ng-option="report.purchased">
-						<option value="off">Off</option>
-						<option value="on">On</option>
+					<select name="flipswitch" id="flipswitch" data-role="slider" ng-model="report.purchased">
+						<option value="false">Off</option>
+						<option value="true">On</option>
 					</select>
 				</div>
 			</div>
 			<br style="clear:both;" />
-			<a data-role="button" ng-click="reportItem()">Report Item</a>
-			{{report.product_id}}
-			<a data-role="button" ng-click="createPurchase()">Create Purchase</a>
+			<a data-role="button" class="{{report.buttonclass}}" ng-click="reportItem()">Report Item</a>
+			<!--{{report.product_id}} ({{report.barcodelength}})-->
+			<!--<a data-role="button" ng-click="createPurchase()">Create Purchase</a>-->
 		</div>
-		
+		</div>
 		
 	</div>
 	<div data-role="footer">
@@ -392,14 +408,19 @@
 					<div><input type="text" ng-model="report.name" /></div>
 					<div>
 						<div>UPC</div>
-						<div>152512542042</div>
+						<div>{{report.barcode}}</div>
 					</div>				
 				</td>
 			</tr>
 			<tr>
-				<td><input type="text" ng-model="report.size" style="width:90%;" /></td>
+			<td colspan="2">
+				<textarea style="width:100%;" ng-model="report.description"></textarea>
+			</td>
+			</tr>
+			<tr>
+				<td><input type="number" ng-model="report.size.amount" style="width:90%;" /></td>
 				<td>
-					<select ng-select="report.units">
+					<select ng-model="report.size.units">
 						<option>Gallons</option>
 						<option>Ounces</option>
 						<option>Kilograms</option>
